[gd_scene load_steps=4 format=3 uid="uid://cujox1bsvj5m8"]

[ext_resource type="Script" path="res://newtrystaff/UI/gem_bar/gem_bar.gd" id="1_kwur3"]
[ext_resource type="Texture2D" uid="uid://br3co3olo3gjh" path="res://newtrystaff/UI/gem_bar/Health Bar.png" id="1_tg81l"]
[ext_resource type="Texture2D" uid="uid://ddhhwxvst651d" path="res://newtrystaff/UI/gem_bar/blue gem big.png" id="3_kko8y"]

[node name="gem_bar" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kwur3")

[node name="Back" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_tg81l")

[node name="Gem1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 7.0
offset_right = 52.0
offset_bottom = 47.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_kko8y")

[node name="Gem2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 7.0
offset_right = 72.0
offset_bottom = 47.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_kko8y")

[node name="Gem3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 7.0
offset_right = 92.0
offset_bottom = 47.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_kko8y")
